# SecOps-Buddy-Remake

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_bot
config/: default_config.yaml
docs/: README.md  architecture.md  configuration.md  improvements.md  installation.md  testing.md
docs/mitre/: T1030.md
docs/operations/: bot.md  logging.md  monitoring.md  t1030-real-test.md
scripts/: t1030_test_traffic.py
secopsbuddy/: cli.py  config.py  event_dispatcher.py  logging_setup.py  main.py  models.py  registry.py  runner.py
secopsbuddy/bot/: control.py  handlers.py  keyboards.py  notifier.py  settings.py  state.py  worker.py
secopsbuddy/collectors/: network_snapshot.py
secopsbuddy/detectors/: __init__.py  base.py  t1030.py
secopsbuddy/responders/: alert.py  firewall.py
tests/: conftest.py  test_bot_settings.py  test_dispatcher.py  test_firewall.py  test_firewall_responder.py  test_registry.py  test_runner.py  test_runner_cooldown.py  test_t1030_detector.py
tests/e2e/: test_bot_event_flow_p2p.py  test_main_cli_e2e.py
tests/integration/: test_runner_block_mode.py  test_runner_pipeline.py
tests/load/: test_load_behaviour.py
tests/unit/: test_alert_responder.py  test_bot_state_and_notifier.py  test_cli_and_models.py  test_collector.py  test_config.py
