[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secopsbuddy"
version = "0.1.0"
description = "Lightweight modular CLI MITRE ATT&CK detection MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "aiogram>=3.7.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
secopsbuddy = "secopsbuddy.main:main"
run_bot = "secopsbuddy.bot.control:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["secopsbuddy*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
